--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Innovation Fest: BIFCA - 2022</h1>
         <h2>16/06/2022 - 20/06/2022</h2> 
+        <h2>Innovation Fest is in....</h2>
     </body>
 </html>
